[ADD] Add all suffixe table result into github

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -157,7 +157,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To store all DC3 result, the following comands."
+    "To store all DC3 result, the following comands.\n",
+    "Stored in .npy, one of the best way of storage for list (https://stackoverflow.com/questions/9619199/best-way-to-preserve-numpy-arrays-on-disk)"
    ]
   },
   {
