[UPDATE] New management of chromosome (new class)
+ Reset of all result of DC3, little problem

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -26,16 +26,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from Bio import SeqIO\n",
+    "from Chromosome import Chromosome\n",
+    "from y_dc3 import dc3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chromosomes:list[Chromosome] = []\n",
     "\n",
-    "chromosomes = []\n",
-    "\n",
-    "for record in SeqIO.parse(\"SEQUENCES/P_fal_genome.fna\", format=\"fasta\"):\n",
-    "    chromosomes.append(record.seq)\n"
+    "for i,record in enumerate(SeqIO.parse(\"SEQUENCES/P_fal_genome.fna\", format=\"fasta\")):\n",
+    "    name = f\"P_fal_chromosome_{i+1}\"\n",
+    "    chromo = Chromosome(name, record.seq)\n",
+    "    chromosomes.append(chromo)"
    ]
   },
   {
@@ -47,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +90,7 @@
     "print(\"Taille de chaque chromosomes, de 1 à 15 :\")\n",
     "i = 1\n",
     "for chromo in chromosomes:\n",
-    "    print(f\"Taille du chromosome {i: >2} : {len(chromo):<7} paires de bases\")\n",
+    "    print(f\"Taille du chromosome {i: >2} : {len(chromo.DNA):<7} paires de bases\")\n",
     "    i += 1"
    ]
   },
@@ -93,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,18 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nombre total de reads : 1500000\n",
-      "Taille des reads: 100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Nombre total de reads : {len(reads)}\")\n",
     "print(f\"Taille des reads: {len(reads[0])}\")"
@@ -144,16 +146,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from y_dc3 import dc3\n",
-    "import File_handler"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -163,14 +155,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i,chr in enumerate(chromosomes):\n",
-    "    name = f\"P_fal_chromosome_{i+1}\"\n",
-    "    file = File_handler.File_handler(name)\n",
-    "    file.export_dc3_result(list(dc3(chr))) # List(numpy) pour régler mais bon \n"
+    "chromosomes[0].suffix_table = None\n",
+    "for chromo in chromosomes: #Create suffixe table if doesnt exist\n",
+    "    if chromo.suffix_table is None:\n",
+    "        dc3result = dc3(chromo.DNA+\"$\")\n",
+    "        chromo.export_dc3_result(dc3result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[172408 120988 172409 ... 186892 186893 186890]\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Complexité calcul"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DC3 = O(n)\n",
+    "\n",
+    "Mapping ?"
    ]
   }
  ],
