--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4,24 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Projet d’Algorithmique pour la Génomique\n",
+    "# Genomics Algorithmics project\n",
     "\n",
-    "## Développement d’une solution de mapping de données de séquençage à haut-débit sur un génome de référence\n",
+    "## Development of a mapping solution over a reference genome for sequencing datas  \n",
     "\n",
-    "### Nicolas Parisot & Sergio Peignier\n",
-    "### (D’après Alban Mancheron et Vincent Ranwez)"
+    "### Nicolas Parisot & Sergio Peignier"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lecture des données de séquençage avec le package *Biopython*\n",
+    "## Reading sequencing datas with *Biopython* package\n",
     "\n",
-    "### Génome entier, chromosome par chromosme, de l'organisme *P.falciparum*\n",
+    "### Complete genome, chromosome by chromosome, of *Plasmodium falciparum*\n",
     "\n",
-    "Avec le package *Biopython*, chacun des 15 chromosomes de *Plasmodium falciparum* est stocké sous la forme d'une chaîne de caractère dans une liste python appelée **chromosomes**. </p>\n",
-    "C'est sur chacun de ces chromosomes que sera réalisé les opérations de mapping et des transformations préalables au mapping."
+    "With *Biopython*, each of the 15 *Plasmodium falciparum* chromosomes is stored in a python list under the form of a string. The python list is named **chromosomes**. Mapping operations will be realised on these chromosomes."
    ]
   },
   {
@@ -35,14 +33,14 @@
     "chromosomes = []\n",
     "\n",
     "for record in SeqIO.parse(\"SEQUENCES/P_fal_genome.fna\", format=\"fasta\"):\n",
-    "    chromosomes.append(record.seq)\n"
+    "    chromosomes.append(record.seq)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le code suivant nous donne le nombre total de chromosomes, ainsi que leur taille respective :"
+    "Number and lengths of the chromosomes are given here:"
    ]
   },
   {
@@ -75,11 +73,11 @@
     }
    ],
    "source": [
-    "print(f\"Nombre de chromosomes : {len(chromosomes)}\")\n",
-    "print(\"Taille de chaque chromosomes, de 1 à 15 :\")\n",
+    "print(f\"Chromosomes number: {len(chromosomes)}\")\n",
+    "print(\"Chromosomes length, from 1 to 15:\")\n",
     "i = 1\n",
     "for chromo in chromosomes:\n",
-    "    print(f\"Taille du chromosome {i: >2} : {len(chromo):<7} paires de bases\")\n",
+    "    print(f\"Length of the {i: >2} chromosome: {len(chromo):<7} pairs of bases\")\n",
     "    i += 1"
    ]
   },
@@ -87,8 +85,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Les *reads*, issus du séquençage à haut-débit du génome d'un individu *P.falciparum*\n",
-    "De la même manière que précédemment, les *reads* sont extraits à l'aide de *Biopython* puis stockés dans une liste python **reads**."
+    "### *Reads* acquired from a *P.falciparum* genome sequencing \n",
+    "In the same way, *reads* are extracted with *Biopython* and stored in a  python list **reads**. All the *reads* have the same length: 100 pairs of bases"
    ]
   },
   {
@@ -118,16 +116,23 @@
     }
    ],
    "source": [
-    "print(f\"Nombre total de reads : {len(reads)}\")\n",
-    "print(f\"Taille des reads: {len(reads[0])}\")"
+    "print(f\"Number of reads: {len(reads)}\")\n",
+    "print(f\"Reads length: {len(reads[0])}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comme nous pouvons le voir, le séquençage haut-débit a généré 1.5 millions de *reads*, d'une taille de 100 nucléotides. Pour affiner le mapping, les reads vont être divisés en fragments encore plus petit, appelés **kmer**. "
+    "As we can see, the high-throughput sequencing generated 1.5 million *reads*, each 100 nucleotides in size. To sharpen the mapping, the reads will be divided into even smaller fragments, called **kmer**. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -144,16 +149,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from y_dc3 import dc3\n",
-    "import File_handler"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -167,7 +162,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i,chr in enumerate(chromosomes):\n",
+    "from y_dc3 import dc3\n",
+    "import File_handler\n",
+    "\n",
+    "for i, chr in enumerate(chromosomes):\n",
     "    name = f\"P_fal_chromosome_{i+1}\"\n",
     "    file = File_handler.File_handler(name)\n",
     "    file.export_dc3_result(list(dc3(chr))) # List(numpy) pour régler mais bon \n"
@@ -176,7 +174,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 64-bit",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -190,12 +188,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "94ca771b458964c1ab442b05578f90bd0a7f7c12d767f9e0d71864d7e9ccae03"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
