--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -85,7 +85,7 @@
     "print(\"Chromosomes length, from 1 to 15:\")\n",
     "i = 1\n",
     "for chromo in chromosomes:\n",
-    "    print(f\"Length of the {i: >2} chromosome: {len(chromo[0]):<7} pairs of bases\")\n",
+    "    print(f\"Length of the {i:>2} chromosome: {len(chromo[0]):<7} pairs of bases\")\n",
     "    i += 1"
    ]
   },
@@ -196,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov  2 2022, 18:53:38) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
