[UPDATE] Management of bwt result
- To avoid str() use in nympy ?
- Check result with sure bwt result

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -30,7 +30,8 @@
             "source": [
                 "from Bio import SeqIO\n",
                 "from Chromosome import Chromosome\n",
-                "from y_dc3 import dc3"
+                "from y_dc3 import dc3\n",
+                "import bwt"
             ]
         },
         {
@@ -169,7 +170,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -178,11 +179,54 @@
                 "        dc3result = dc3(chromo.DNA_dol)\n",
                 "        chromo.export_dc3_result"
             ]
+        },
+        {
+            "attachments": {},
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "This chunk create all Suffix table if it's the first time you generated the dc3 result.\n",
+                "All suffixe table has been created to compute BWT on all sequences"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 16,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "<class 'Bio.Seq.Seq'>\n",
+                        "<class 'Bio.Seq.Seq'>\n",
+                        "<class 'Bio.Seq.Seq'>\n",
+                        "<class 'Bio.Seq.Seq'>\n",
+                        "<class 'Bio.Seq.Seq'>\n",
+                        "<class 'Bio.Seq.Seq'>\n",
+                        "<class 'Bio.Seq.Seq'>\n",
+                        "<class 'Bio.Seq.Seq'>\n",
+                        "<class 'Bio.Seq.Seq'>\n",
+                        "<class 'Bio.Seq.Seq'>\n",
+                        "<class 'Bio.Seq.Seq'>\n",
+                        "<class 'Bio.Seq.Seq'>\n",
+                        "<class 'Bio.Seq.Seq'>\n",
+                        "<class 'Bio.Seq.Seq'>\n",
+                        "<class 'Bio.Seq.Seq'>\n"
+                    ]
+                }
+            ],
+            "source": [
+                "for chromo in chromosomes:\n",
+                "    if chromo.bwt is None:\n",
+                "        bwt_result = bwt.bwt(str(chromo.DNA_dol),chromo.suffix_table) #TODO: avoid str() use\n",
+                "        chromo.export_bwt_result(bwt_result) #TODO 2: verify result\n"
+            ]
         }
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3.10.6 64-bit",
+            "display_name": "Python 3",
             "language": "python",
             "name": "python3"
         },
@@ -196,12 +240,12 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.6 (main, Nov  2 2022, 18:53:38) [GCC 11.3.0]"
+            "version": "3.10.3"
         },
         "orig_nbformat": 4,
         "vscode": {
             "interpreter": {
-                "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+                "hash": "9c6950969c84b67edea1a7d8f4ef0483805b2f2e9e6113a3880292c4ff65adf5"
             }
         }
     },
