[UPDATE] All new result for inverse comp seq
- rank_mat fun added to classe Chromosome
- Result for reverse-comp sequence

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -31,7 +31,8 @@
                 "from Bio import SeqIO\n",
                 "from Chromosome import Chromosome\n",
                 "from y_dc3 import dc3\n",
-                "import bwt"
+                "import bwt\n",
+                "import tools"
             ]
         },
         {
@@ -41,11 +42,17 @@
             "outputs": [],
             "source": [
                 "chromosomes:list[Chromosome] = []\n",
+                "chromosomes_inv:list[Chromosome] = []\n",
                 "\n",
                 "for i,record in enumerate(SeqIO.parse(\"SEQUENCES/P_fal_genome.fna\", format=\"fasta\")):\n",
                 "    name = f\"P_fal_chromosome_{i+1}\"\n",
                 "    chromo = Chromosome(name,record.seq,record.id)\n",
-                "    chromosomes.append(chromo)"
+                "    chromosomes.append(chromo)\n",
+                "    #now for inverse\n",
+                "    name_inversed_comp = f\"P_fal_chromosome_-{i+1}\"\n",
+                "    inversed_comp_seq = tools.inverse_sequence(record.seq)\n",
+                "    chromo_inv = Chromosome(name_inversed_comp,record.seq,record.id)\n",
+                "    chromosomes_inv.append(chromo_inv)"
             ]
         },
         {
@@ -57,7 +64,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 23,
             "metadata": {},
             "outputs": [
                 {
@@ -66,31 +73,48 @@
                     "text": [
                         "Chromosomes number: 15\n",
                         "Chromosomes length, from 1 to 15:\n",
-                        "Length of the  1 chromosome: 640851  pairs of bases\n",
-                        "Length of the  2 chromosome: 947102  pairs of bases\n",
-                        "Length of the  3 chromosome: 1067971 pairs of bases\n",
-                        "Length of the  4 chromosome: 1200490 pairs of bases\n",
-                        "Length of the  5 chromosome: 1343557 pairs of bases\n",
-                        "Length of the  6 chromosome: 1418242 pairs of bases\n",
-                        "Length of the  7 chromosome: 1445207 pairs of bases\n",
-                        "Length of the  8 chromosome: 1472805 pairs of bases\n",
-                        "Length of the  9 chromosome: 1541735 pairs of bases\n",
-                        "Length of the 10 chromosome: 1687656 pairs of bases\n",
-                        "Length of the 11 chromosome: 2038340 pairs of bases\n",
-                        "Length of the 12 chromosome: 2271494 pairs of bases\n",
-                        "Length of the 13 chromosome: 2925236 pairs of bases\n",
-                        "Length of the 14 chromosome: 3291936 pairs of bases\n",
-                        "Length of the 15 chromosome: 34250   pairs of bases\n"
+                        "Length of the chromosome  1 : 640852  pairs of bases\n",
+                        "Length of the chromosome  2 : 947103  pairs of bases\n",
+                        "Length of the chromosome  3 : 1067972 pairs of bases\n",
+                        "Length of the chromosome  4 : 1200491 pairs of bases\n",
+                        "Length of the chromosome  5 : 1343558 pairs of bases\n",
+                        "Length of the chromosome  6 : 1418243 pairs of bases\n",
+                        "Length of the chromosome  7 : 1445208 pairs of bases\n",
+                        "Length of the chromosome  8 : 1472806 pairs of bases\n",
+                        "Length of the chromosome  9 : 1541736 pairs of bases\n",
+                        "Length of the chromosome 10 : 1687657 pairs of bases\n",
+                        "Length of the chromosome 11 : 2038341 pairs of bases\n",
+                        "Length of the chromosome 12 : 2271495 pairs of bases\n",
+                        "Length of the chromosome 13 : 2925237 pairs of bases\n",
+                        "Length of the chromosome 14 : 3291937 pairs of bases\n",
+                        "Length of the chromosome 15 : 34251   pairs of bases\n",
+                        "Length of the chromosome - 1 : 640852  pairs of bases\n",
+                        "Length of the chromosome - 2 : 947103  pairs of bases\n",
+                        "Length of the chromosome - 3 : 1067972 pairs of bases\n",
+                        "Length of the chromosome - 4 : 1200491 pairs of bases\n",
+                        "Length of the chromosome - 5 : 1343558 pairs of bases\n",
+                        "Length of the chromosome - 6 : 1418243 pairs of bases\n",
+                        "Length of the chromosome - 7 : 1445208 pairs of bases\n",
+                        "Length of the chromosome - 8 : 1472806 pairs of bases\n",
+                        "Length of the chromosome - 9 : 1541736 pairs of bases\n",
+                        "Length of the chromosome -10 : 1687657 pairs of bases\n",
+                        "Length of the chromosome -11 : 2038341 pairs of bases\n",
+                        "Length of the chromosome -12 : 2271495 pairs of bases\n",
+                        "Length of the chromosome -13 : 2925237 pairs of bases\n",
+                        "Length of the chromosome -14 : 3291937 pairs of bases\n",
+                        "Length of the chromosome -15 : 34251   pairs of bases\n"
                     ]
                 }
             ],
             "source": [
                 "print(f\"Chromosomes number: {len(chromosomes)}\")\n",
                 "print(\"Chromosomes length, from 1 to 15:\")\n",
-                "i = 1\n",
-                "for chromo in chromosomes:\n",
-                "    print(f\"Length of the {i:>2} chromosome: {len(chromo[0]):<7} pairs of bases\")\n",
-                "    i += 1"
+                "for i, chromo in enumerate(chromosomes):\n",
+                "    i += 1\n",
+                "    print(f\"Length of the chromosome {i:>2} : {len(chromo.DNA_dol):<7} pairs of bases\")\n",
+                "for i, chromo in enumerate(chromosomes_inv):\n",
+                "    i += 1\n",
+                "    print(f\"Length of the chromosome -{i:>2} : {len(chromo.DNA_dol):<7} pairs of bases\")"
             ]
         },
         {
@@ -170,14 +194,52 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 26,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "P_fal_chromosome_1\n",
+                        "P_fal_chromosome_2\n",
+                        "P_fal_chromosome_3\n",
+                        "P_fal_chromosome_4\n",
+                        "P_fal_chromosome_5\n",
+                        "P_fal_chromosome_6\n",
+                        "P_fal_chromosome_7\n",
+                        "P_fal_chromosome_8\n",
+                        "P_fal_chromosome_9\n",
+                        "P_fal_chromosome_10\n",
+                        "P_fal_chromosome_11\n",
+                        "P_fal_chromosome_12\n",
+                        "P_fal_chromosome_13\n",
+                        "P_fal_chromosome_14\n",
+                        "P_fal_chromosome_15\n",
+                        "P_fal_chromosome_-1\n",
+                        "P_fal_chromosome_-2\n",
+                        "P_fal_chromosome_-3\n",
+                        "P_fal_chromosome_-4\n",
+                        "P_fal_chromosome_-5\n",
+                        "P_fal_chromosome_-6\n",
+                        "P_fal_chromosome_-7\n",
+                        "P_fal_chromosome_-8\n",
+                        "P_fal_chromosome_-9\n",
+                        "P_fal_chromosome_-10\n",
+                        "P_fal_chromosome_-11\n",
+                        "P_fal_chromosome_-12\n",
+                        "P_fal_chromosome_-13\n",
+                        "P_fal_chromosome_-14\n",
+                        "P_fal_chromosome_-15\n"
+                    ]
+                }
+            ],
             "source": [
-                "for chromo in chromosomes:\n",
+                "for chromo in chromosomes+chromosomes_inv:\n",
+                "    print(chromo.file_name)\n",
                 "    if chromo.suffix_table is None:\n",
                 "        dc3result = dc3(chromo.DNA_dol)\n",
-                "        chromo.export_dc3_result"
+                "        chromo.export_dc3_result(dc3result)"
             ]
         },
         {
@@ -191,36 +253,65 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 16,
+            "execution_count": 27,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "for chromo in chromosomes+chromosomes_inv:\n",
+                "    print(chromo.file_name)\n",
+                "    if chromo.bwt is None:\n",
+                "        bwt_result = bwt.bwt(str(chromo.DNA_dol),chromo.suffix_table) #TODO: avoid str() use\n",
+                "        chromo.export_bwt_result(bwt_result) #TODO 2: verify result\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "<class 'Bio.Seq.Seq'>\n",
-                        "<class 'Bio.Seq.Seq'>\n",
-                        "<class 'Bio.Seq.Seq'>\n",
-                        "<class 'Bio.Seq.Seq'>\n",
-                        "<class 'Bio.Seq.Seq'>\n",
-                        "<class 'Bio.Seq.Seq'>\n",
-                        "<class 'Bio.Seq.Seq'>\n",
-                        "<class 'Bio.Seq.Seq'>\n",
-                        "<class 'Bio.Seq.Seq'>\n",
-                        "<class 'Bio.Seq.Seq'>\n",
-                        "<class 'Bio.Seq.Seq'>\n",
-                        "<class 'Bio.Seq.Seq'>\n",
-                        "<class 'Bio.Seq.Seq'>\n",
-                        "<class 'Bio.Seq.Seq'>\n",
-                        "<class 'Bio.Seq.Seq'>\n"
+                        "P_fal_chromosome_1\n",
+                        "P_fal_chromosome_2\n",
+                        "P_fal_chromosome_3\n",
+                        "P_fal_chromosome_4\n",
+                        "P_fal_chromosome_5\n",
+                        "P_fal_chromosome_6\n",
+                        "P_fal_chromosome_7\n",
+                        "P_fal_chromosome_8\n",
+                        "P_fal_chromosome_9\n",
+                        "P_fal_chromosome_10\n",
+                        "P_fal_chromosome_11\n",
+                        "P_fal_chromosome_12\n",
+                        "P_fal_chromosome_13\n",
+                        "P_fal_chromosome_14\n",
+                        "P_fal_chromosome_15\n",
+                        "P_fal_chromosome_-1\n",
+                        "P_fal_chromosome_-2\n",
+                        "P_fal_chromosome_-3\n",
+                        "P_fal_chromosome_-4\n",
+                        "P_fal_chromosome_-5\n",
+                        "P_fal_chromosome_-6\n",
+                        "P_fal_chromosome_-7\n",
+                        "P_fal_chromosome_-8\n",
+                        "P_fal_chromosome_-9\n",
+                        "P_fal_chromosome_-10\n",
+                        "P_fal_chromosome_-11\n",
+                        "P_fal_chromosome_-12\n",
+                        "P_fal_chromosome_-13\n",
+                        "P_fal_chromosome_-14\n",
+                        "P_fal_chromosome_-15\n"
                     ]
                 }
             ],
             "source": [
-                "for chromo in chromosomes:\n",
-                "    if chromo.bwt is None:\n",
-                "        bwt_result = bwt.bwt(str(chromo.DNA_dol),chromo.suffix_table) #TODO: avoid str() use\n",
-                "        chromo.export_bwt_result(bwt_result) #TODO 2: verify result\n"
+                "for chromo in chromosomes+chromosomes_inv:\n",
+                "    print(chromo.file_name)\n",
+                "    if chromo.rank_mat is None:\n",
+                "        rank_mat = bwt.create_rank_mat(chromo.bwt)\n",
+                "        chromo.export_rank_matrix_result(rank_mat) "
             ]
         }
     ],
