[UPDATE] Corrected data + minor change
- New correct data for inversed comp chromosomes
- New rank_matrice
- Now chromosome rank mat return a dict

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -30,7 +30,7 @@
             "source": [
                 "from Bio import SeqIO\n",
                 "from Chromosome import Chromosome\n",
-                "from y_dc3 import dc3\n",
+                "from dc3 import dc3\n",
                 "import bwt\n",
                 "import tools"
             ]
@@ -51,7 +51,7 @@
                 "    #now for inverse\n",
                 "    name_inversed_comp = f\"P_fal_chromosome_-{i+1}\"\n",
                 "    inversed_comp_seq = tools.inverse_sequence(record.seq)\n",
-                "    chromo_inv = Chromosome(name_inversed_comp,record.seq,record.id)\n",
+                "    chromo_inv = Chromosome(name_inversed_comp,inversed_comp_seq,record.id)\n",
                 "    chromosomes_inv.append(chromo_inv)"
             ]
         },
@@ -194,7 +194,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 26,
+            "execution_count": 6,
             "metadata": {},
             "outputs": [
                 {
@@ -253,20 +253,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 27,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "for chromo in chromosomes+chromosomes_inv:\n",
-                "    print(chromo.file_name)\n",
-                "    if chromo.bwt is None:\n",
-                "        bwt_result = bwt.bwt(str(chromo.DNA_dol),chromo.suffix_table) #TODO: avoid str() use\n",
-                "        chromo.export_bwt_result(bwt_result) #TODO 2: verify result\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [
                 {
@@ -309,9 +296,152 @@
             "source": [
                 "for chromo in chromosomes+chromosomes_inv:\n",
                 "    print(chromo.file_name)\n",
+                "    if chromo.bwt is None:\n",
+                "        bwt_result = bwt.bwt(str(chromo.DNA_dol),chromo.suffix_table) #TODO: avoid str() use\n",
+                "        chromo.export_bwt_result(bwt_result) #TODO 2: verify result\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 3,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "P_fal_chromosome_1\n",
+                        "640852\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_2\n",
+                        "947103\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_3\n",
+                        "1067972\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_4\n",
+                        "1200491\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_5\n",
+                        "1343558\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_6\n",
+                        "1418243\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_7\n",
+                        "1445208\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_8\n",
+                        "1472806\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_9\n",
+                        "1541736\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_10\n",
+                        "1687657\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_11\n",
+                        "2038341\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_12\n",
+                        "2271495\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_13\n",
+                        "2925237\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_14\n",
+                        "3291937\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_15\n",
+                        "34251\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_-1\n",
+                        "640852\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_-2\n",
+                        "947103\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_-3\n",
+                        "1067972\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_-4\n",
+                        "1200491\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_-5\n",
+                        "1343558\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_-6\n",
+                        "1418243\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_-7\n",
+                        "1445208\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_-8\n",
+                        "1472806\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_-9\n",
+                        "1541736\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_-10\n",
+                        "1687657\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_-11\n",
+                        "2038341\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_-12\n",
+                        "2271495\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_-13\n",
+                        "2925237\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_-14\n",
+                        "3291937\n",
+                        "Done !\n",
+                        "Exported !\n",
+                        "P_fal_chromosome_-15\n",
+                        "34251\n",
+                        "Done !\n",
+                        "Exported !\n"
+                    ]
+                }
+            ],
+            "source": [
+                "for chromo in chromosomes+chromosomes_inv:\n",
+                "    print(chromo.file_name)\n",
                 "    if chromo.rank_mat is None:\n",
+                "        print(len(chromo.bwt))\n",
                 "        rank_mat = bwt.create_rank_mat(chromo.bwt)\n",
-                "        chromo.export_rank_matrix_result(rank_mat) "
+                "        print(\"Done !\")\n",
+                "        chromo.export_rank_matrix_result(rank_mat) \n",
+                "        print(\"Exported !\")"
             ]
         }
     ],
